# GenericForeignKey-Sample

./: README.md  pyproject.toml  pytest.ini
config/: settings.py
devices/: models.py
devices/migrations/: 0001_initial.py
devices/tests/: test_location.py
factories/: models.py
factories/migrations/: 0001_initial.py
members/: models.py
members/migrations/: 0001_initial.py
merchants/: models.py
merchants/migrations/: 0001_initial.py
sites/: models.py
sites/migrations/: 0001_initial.py
