[tool.poetry]
name = "generic_foreignkey"
version = "0.1.0"
description = ""
authors = ["이한영 <dev@lhy.kr>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.2"
django-extensions = "^2.2.5"
pytest-django = "^3.7.0"
model-bakery = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
